fix bubble wrap colors to gray? pt. 2

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -151,7 +151,7 @@ body.calm1{
   align-items: center;
   gap: 10px; 
   justify-content: center;
-  background-color: #dce4e6;
+  background-color: #e2e3e4;
   padding: 10px;
   border-radius: 2%;
   margin: 200px 50px;
